# metagame-server-engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.en.md  README.md
src/basicnetwork/: CMakeLists.txt  basicnetwork.cpp  basicnetwork.h  basicnetworkhandler.h  def.h  job.h  jobaccept.cpp  jobaccept.h  jobdisconnect.cpp  jobdisconnect.h  jobqueue.h  jobrecv.cpp  jobrecv.h  listenhandler.cpp  listenhandler.h  network.cpp  network.h  tcphandler.cpp  tcphandler.h
src/common/: CMakeLists.txt  bintohex.cpp  buffer.cpp  buffer.h  cowbuffer.cpp  cowbuffer.h  syspath.cpp  tlvprotocol.cpp  tlvprotocol.h  typetransform.cpp  typetransform.h  vector2d.h
src/common/config/: config.cpp  xmlconfig.cpp
src/common/md5/: md5.c  md5.h  md5cpp.cpp  md5cpp.h
src/common/memory/: clmempool.cpp  memdef.h  memmonitor.cpp  mempool.cpp  msgmem.cpp
src/common/platform/: system.cpp  systemex.cpp
src/common/tinyxml/: tinyxml.cpp
src/config/: CMakeLists.txt  _configmodule.cpp  _configmodule.h  configmain.cpp
src/fastdb/: CMakeLists.txt
src/gameserver/: CMakeLists.txt  game.cpp  modulemain.cpp
src/gameserver/module/: _clockmodule.cpp  (+9 more)
src/log/: CMakeLists.txt  _logmodule.cpp  _logmodule.h  filelog.cpp  filelog.h  ilogimpl.cpp  ilogimpl.h  logmain.cpp  nullog.h  stdoutlog.h
src/network/: CMakeLists.txt  _networkmodule.cpp  _networkmodule.h  networkmain.cpp
src/rmi/: CMakeLists.txt  _rmimodule.cpp  _rmimodule.h  rmibase.cpp  rmidef.cpp  rmidef.h  rmimain.cpp  rmisession.cpp  rmisession.h
src/utility/: CMakeLists.txt  configpath.cpp  logagent.cpp  logagent.h
(+7 files in other folders)
